chore: added a new endpoint for testing feign
